archived_morph/legacy_tests/tests/fixtures/invalid_programs/syntax_error.fox
# Program dengan error sintaks
biar x = 5 +
tulis(x)
